--- a/templates/level.view.html.twig
+++ b/templates/level.view.html.twig
@@ -1,8 +1,8 @@
 {% extends '@Symfony6AdminLte/layout.html.twig' %}
 
+{% block title %}View - {{ root }} {% endblock %}
 {% block page_content %}
     <table class="table">
-
         <thead>
             <tr>
                 <td width="200">name</td>
